# llm-code

./: AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  justfile  pyproject.toml
.github/workflows/: github-action-demo.yml
llm_code/: __init__.py  db.py  llm_code.py  templates.py
prompts/coding/: system.toml
prompts/coding/user/: input.toml  simple.toml
src/llm_code/: agent.py  db.py  llm_code.py  models.py  providers.py  settings.py  templates.py  tui.py
tests/: test_agent.py  test_db.py  test_llm_code.py  test_settings.py  test_templates.py  test_tui.py
